前台应用第二阶段CSS调整

--- a/app/views/icm/incident_journals/_new_form.html.erb
+++ b/app/views/icm/incident_journals/_new_form.html.erb
@@ -360,7 +360,7 @@
 <% end %>
 <% end %>
 
-<%if allow_to_function?(:reply_incident_request)%>
+<%if false && allow_to_function?(:reply_incident_request)%>
 <script type="text/javascript">
 
 GY.use('irm','node','substitute','yui2-editor', function(Y) {
