--- a/app/views/irm/object_attributes/_new_step_1.html.erb
+++ b/app/views/irm/object_attributes/_new_step_1.html.erb
@@ -1,5 +1,5 @@
 <%= form_for(@object_attribute,:url=>{:action=>"new", :step => "2"},:builder => LabellingFormBuilder) do |f| %>
-<div  class="bWizardBlock">
+<div  class="wizard-block">
     <div class="pbWizardTitle tertiaryPalette">
         <div class="ptRightTitle">
             <%= t(:step_n_total_m, :n => "1", :m => "2") %>
