--- a/app/views/irm/object_attributes/change_type.html.erb
+++ b/app/views/irm/object_attributes/change_type.html.erb
@@ -1,6 +1,6 @@
 <%= page_title("",t(:label_irm_object_attribute_change_type_link)) %>
 <%= form_for(@object_attribute,:url=>{:action=>"edit"},:builder => LabellingFormBuilder) do |f| %>
-<div  class="bWizardBlock">
+<div  class="wizard-block">
   <div class="pbWizardTitle tertiaryPalette">
       <div class="ptRightTitle">
 
