--- a/app/views/irm/reports/_new_step_1.html.erb
+++ b/app/views/irm/reports/_new_step_1.html.erb
@@ -3,7 +3,7 @@
       min-width:128px;
   }
 </style>
-<div  class="bWizardBlock">
+<div  class="wizard-block">
   <%= render :partial => "step_header",:locals => {:step=>@report.step} %>
   <div class="pbBody">
   <%= error_for @report%>
