--- a/app/views/irm/wf_approval_processes/_edit_step_5.html.erb
+++ b/app/views/irm/wf_approval_processes/_edit_step_5.html.erb
@@ -5,7 +5,7 @@
 </style>
 <%= form_for(@wf_approval_process,:url=>{:action=>"update"},:builder => LabellingFormBuilder) do |f| %>
 <%= f.hidden_field(:step) %>
-<div  class="bWizardBlock">
+<div  class="wizard-block">
     <div class="pbWizardTitle tertiaryPalette">
         <div class="ptRightTitle">
             <%= t(:step_n_total_m, :n => "4", :m => "5") %>
