--- a/app/views/irm/wf_approval_steps/_new_step_3.html.erb
+++ b/app/views/irm/wf_approval_steps/_new_step_3.html.erb
@@ -6,7 +6,7 @@
 </style>
 <%= form_for(@wf_approval_step,:url=>{:action=>"create"},:builder => LabellingFormBuilder) do |f| %>
 <%= f.hidden_field(:step) %>
-<div  class="bWizardBlock">
+<div  class="wizard-block">
     <div class="pbWizardTitle tertiaryPalette">
         <div class="ptRightTitle">
             <%= t(:step_n_total_m, :n => "3", :m => "3") %>
