--- a/app/views/skm/entry_headers/new_step_3.html.erb
+++ b/app/views/skm/entry_headers/new_step_3.html.erb
@@ -4,7 +4,7 @@
     <%= f.hidden_field :entry_title %>
     <%= f.hidden_field :keyword_tags %>
     <%= f.hidden_field :column_ids %>
-<div  class="bWizardBlock">
+<div  class="wizard-block">
     <div class="pbWizardTitle tertiaryPalette">
         <div class="ptRightTitle">
             <%= t(:step_n_total_m, :n => "3", :m => "4") %>
