--- a/public/themes/default/stylesheets/icons.ie6.css
+++ b/public/themes/default/stylesheets/icons.ie6.css
@@ -1,139 +1,139 @@
 
 img.img1Small{
-    background-image:url("/images/master.png");
+    background-image:url("/images/master.gif");
     background-position:0 -1px;
     height:16px;
     width:16px;
 }
 img.img1General{
-    background-image:url("/images/master.png");
+    background-image:url("/images/master.gif");
     background-position:0 -950px;
     height:32px;
     width:32px;
 }
 img.img1Large{
-    background-image:url("/images/master.png");
+    background-image:url("/images/master.gif");
     background-position:0 -950px;
     height:32px;
     width:32px;
 }
 
 img.img2Small{
-    background-image:url("/images/master.png");
+    background-image:url("/images/master.gif");
     background-position:0 -24;
     height:16px;
     width:16px;
 }
 img.img2General{
-    background-image:url("/images/master.png");
+    background-image:url("/images/master.gif");
     background-position:0 -1022px;
     height:32px;
     width:32px;
 }
 img.img2Large{
-    background-image:url("/images/master.png");
+    background-image:url("/images/master.gif");
     background-position:0 -985px;
     height:32px;
     width:32px;
 }
 
 img.img3Small{
-    background-image:url("/images/master.png");
+    background-image:url("/images/master.gif");
     background-position:0 -41;
     height:16px;
     width:16px;
 }
 img.img3General{
-    background-image:url("/images/master.png");
+    background-image:url("/images/master.gif");
     background-position:0 -1238px;
     height:32px;
     width:32px;
 }
 img.img3Large{
-    background-image:url("/images/master.png");
+    background-image:url("/images/master.gif");
     background-position:0 -1025px;
     height:32px;
     width:32px;
 }
 
 img.img4Small{
-    background-image:url("/images/master.png");
+    background-image:url("/images/master.gif");
     background-position:0 -62px;
     height:16px;
     width:16px;
 }
 img.img4General{
-    background-image:url("/images/master.png");
+    background-image:url("/images/master.gif");
     background-position:0 -1274px;
     height:32px;
     width:32px;
 }
 img.img4Large{
-    background-image:url("/images/master.png");
+    background-image:url("/images/master.gif");
     background-position:0 -1059px;
     height:32px;
     width:32px;
 }
 
 img.img5Small{
-    background-image:url("/images/master.png");
+    background-image:url("/images/master.gif");
     background-position:0 -81px;
     height:16px;
     width:16px;
 }
 img.img5General{
-    background-image:url("/images/master.png");
+    background-image:url("/images/master.gif");
     background-position:0 -1094px;
     height:32px;
     width:32px;
 }
 img.img5Large{
-    background-image:url("/images/master.png");
+    background-image:url("/images/master.gif");
     background-position:0 -1095px;
     height:32px;
     width:32px;
 }
 
 img.img6Small{
-    background-image:url("/images/master.png");
+    background-image:url("/images/master.gif");
     background-position:0 -102px;
     height:16px;
     width:16px;
 }
 img.img6General{
-    background-image:url("/images/master.png");
+    background-image:url("/images/master.gif");
     background-position:0 -1166px;
     height:32px;
     width:32px;
 }
 img.img6Large{
-    background-image:url("/images/master.png");
+    background-image:url("/images/master.gif");
     background-position:0 -1310px;
     height:32px;
     width:32px;
 }
 
 img.img7Small{
-    background-image:url("/images/master.png");
+    background-image:url("/images/master.gif");
     background-position:0 -122px;
     height:16px;
     width:16px;
 }
 img.img7General{
-    background-image:url("/images/master.png");
+    background-image:url("/images/master.gif");
     background-position:0 -1238px;
     height:32px;
     width:32px;
 }
 img.img7Large{
-    background-image:url("/images/master.png");
+    background-image:url("/images/master.gif");
     background-position:0 -1056px;
     height:32px;
     width:32px;
 }
 
 img.img8Small{
-    background-image:url("/images/master.png");
+    background-image:url("/images/master.gif");
     background-position:0 -142px;
     height:16px;
     width:16px;
@@ -145,14 +145,14 @@ img.img8General{
     width:32px;
 }
 img.img8Large{
-    background-image:url("/images/master.png");
+    background-image:url("/images/master.gif");
     background-position:0 -1205px;
     height:32px;
     width:32px;
 }
 
 img.img9Small{
-    background-image:url("/images/master.png");
+    background-image:url("/images/master.gif");
     background-position:0 -162px;
     height:16px;
     width:16px;
@@ -164,14 +164,14 @@ img.img9General{
     width:32px;
 }
 img.img9Large{
-    background-image:url("/images/master.png");
+    background-image:url("/images/master.gif");
     background-position:0 -1238px;
     height:32px;
     width:32px;
 }
 
 img.img10Small{
-    background-image:url("/images/master.png");
+    background-image:url("/images/master.gif");
     background-position:0 -182px;
     height:16px;
     width:16px;
@@ -183,14 +183,14 @@ img.img10General{
     width:32px;
 }
 img.img10Large{
-    background-image:url("/images/master.png");
+    background-image:url("/images/master.gif");
     background-position:0 -1351px;
     height:32px;
     width:32px;
 }
 
 img.img11Small{
-    background-image:url("/images/master.png");
+    background-image:url("/images/master.gif");
     background-position:0 -202px;
     height:16px;
     width:16px;
@@ -204,7 +204,7 @@ img.img11General{
 img.img11Big{}
 
 img.img12Small{
-    background-image:url("/images/master.png");
+    background-image:url("/images/master.gif");
     background-position:0 -222px;
     height:16px;
     width:16px;
@@ -218,7 +218,7 @@ img.img12General{
 img.img12Big{}
 
 img.img13Small{
-    background-image:url("/images/master.png");
+    background-image:url("/images/master.gif");
     background-position:0 -242px;
     height:16px;
     width:16px;
@@ -232,7 +232,7 @@ img.img13General{
 img.img13Big{}
 
 img.img14Small{
-    background-image:url("/images/master.png");
+    background-image:url("/images/master.gif");
     background-position:0 -281px;
     height:16px;
     width:16px;
@@ -244,14 +244,14 @@ img.img14General{
     width:32px;
 }
 img.img14Large{
-    background-image:url("/images/master.png");
+    background-image:url("/images/master.gif");
     background-position:0 -1273px;
     height:32px;
     width:32px;
 }
 
 img.img15Small{
-    background-image:url("/images/master.png");
+    background-image:url("/images/master.gif");
     background-position:0 -301px;
     height:16px;
     width:16px;
@@ -265,7 +265,7 @@ img.img15General{
 img.img15Big{}
 
 img.img16Small{
-    background-image:url("/images/master.png");
+    background-image:url("/images/master.gif");
     background-position:0 -322px;
     height:16px;
     width:16px;
@@ -279,7 +279,7 @@ img.img16General{
 img.img16Big{}
 
 img.img17Small{
-    background-image:url("/images/master.png");
+    background-image:url("/images/master.gif");
     background-position:0 -341px;
     height:16px;
     width:16px;
@@ -291,7 +291,7 @@ img.img17General{
     width:32px;
 }
 img.img17Large{
-    background-image:url("/images/master.png");
+    background-image:url("/images/master.gif");
     background-position:0 -1385px;
     height:32px;
     width:32px;
@@ -377,8 +377,8 @@ a:hover .monthViewIconOff {
     display: block;
 }
 
-.sidebarModule .sidebarModuleBody>table a[href*="surveys"] > img{background-image:url("/images/master.png");background-position:0 -341px;height:16px;width:16px;}/*img17*/
-.sidebarModule .sidebarModuleBody>table a[href*="entry_headers"] > img{background-image:url("/images/master.png");background-position:0 -182px;height:16px;width:16px;}/*img10*/
+.sidebarModule .sidebarModuleBody>table a[href*="surveys"] > img{background-image:url("/images/master.gif");background-position:0 -341px;height:16px;width:16px;}/*img17*/
+.sidebarModule .sidebarModuleBody>table a[href*="entry_headers"] > img{background-image:url("/images/master.gif");background-position:0 -182px;height:16px;width:16px;}/*img10*/
 
 
 body .infoIcon {
