--- a/app/views/icm/incident_requests/_new_form.html.erb
+++ b/app/views/icm/incident_requests/_new_form.html.erb
@@ -43,17 +43,15 @@
             <% if allow_to_function?(:create_icdt_rqst_for_other) %>
               <tr>
                 <td class="labelCol"><label for="incident_request_requested_by"><%=t(:label_icm_incident_request_requested_by)%></label></td>
-                <td class="dataCol"><%=f.select :requested_by,nullable_options_for_select(available_person, @incident_request.requested_by),
+                <td class="data2Col"><%=f.select :requested_by,nullable_options_for_select(available_person, @incident_request.requested_by),
                                                       {},{:required=>true,:id=>"incident_request_requested_by"}%></td>
-                <td class="labelCol empty">&nbsp;</td>
-                <td class="dataCol empty">&nbsp;</td>
               </tr>
             <% else %>
                 <%= f.hidden_field(:requested_by,:value=>Irm::Person.current.id, :id=>"incident_request_requested_by") %>
             <% end %>
             <tr>
               <td class="labelCol"><label for="incident_request_service_code"><%=t(:label_icm_incident_request_target_system)%></label></td>
-              <td class="dataCol">
+              <td class="data2Col">
                 <% if allow_to_function?(:create_icdt_rqst_for_other) %>
                     <%=f.select :external_system_id,nullable_options_for_select([],@incident_request.external_system_id),{:value=>@incident_request.external_system_id},
                             {:required=>true,:id=>"ass_external_system",
@@ -72,13 +70,11 @@
                              :href=>url_for(:controller=>"icm/incident_requests",:action=>"get_external_systems",:format=>"json",:requested_by=>"{incident_request_requested_by}")}%>
                 <% end %>
               </td>
-              <td class="labelCol empty">&nbsp;</td>
-              <td class="dataCol empty">&nbsp;</td>
             </tr>
 
             <tr>
               <td class="labelCol"><label for="incident_request_service_code"><%=t(:label_icm_incident_request_service_code)%></label></td>
-              <td class="dataCol"><%=f.select :service_code,
+              <td class="data2Col"><%=f.select :service_code,
                                             nullable_options_for_select([],@incident_request.service_code),
                                             {},
                                             {:required=>true,:id=>"incident_request_service_code",
@@ -88,21 +84,19 @@
                                              :href=>url_for(:controller=>"icm/incident_requests",:action=>"get_slm_services",:format=>"json",
                                                             :external_system_id=>"{ass_external_system}", :requested_by => "{incident_request_requested_by}")}%>
               </td>
-              <td class="labelCol empty">&nbsp;</td>
-              <td class="dataCol empty">&nbsp;</td>
             </tr>
             <tr>
               <td class="labelCol"><label for="incident_request_title"><%=t(:label_icm_incident_request_title)%></label></td>
-              <td class="dataCol" colspan="3" style="width:82%"><%=f.text_field :title,:size=>80, :required=>true ,:id=>"incident_request_title"%></td>
+              <td class="data2Col" colspan="3"><%=f.text_field :title,:size=>80, :required=>true ,:id=>"incident_request_title"%></td>
             </tr>
 
             <tr>
               <td class="labelCol"><label for="incident_request_summary"><%=t(:label_icm_incident_request_summary)%></label></td>
-              <td class="dataCol" colspan="3" style="width:82%"><%=f.text_area :summary,:rows=>5,:cols=>100,:value=>@incident_request.summary||"   ", :required=>true ,:style=>"display:none;",:id=>"incident_request_summary"%></td>
+              <td class="data2Col" colspan="3"><%=f.text_area :summary,:rows=>5,:cols=>100,:value=>@incident_request.summary||"   ", :required=>true ,:style=>"display:none;",:id=>"incident_request_summary"%></td>
             </tr>
             <tr>
               <td class="labelCol"></td>
-              <td class="dataCol" colspan="3" style="width:82%">
+              <td class="data2Col" colspan="3">
                 <table width="80%">
                   <tbody id="fileTemplate" style="display:none" seq="0">
                   <tr id="file_{seq}" class="fileArea">
