--- a/app/views/irm/filters/_edit_form.html.erb
+++ b/app/views/irm/filters/_edit_form.html.erb
@@ -84,7 +84,7 @@
       <h3><%=t(:label_irm_view_filter_criterion)%></h3>
     </div>
     <div class="pbSubsection" id="filterContent" href="<%= url_for(:action=>"operator_value",:seq_num=>"{seq_num}",:attribute_id=>"{attribute_id}") %>">
-      <table cellpadding="0" cellspacing="0" border="0">
+      <table class="matrix-table" cellpadding="0" cellspacing="0" border="0">
         <thead>
           <tr>
             <th width="20%"></th>
