--- a/app/views/irm/home/index.html.erb
+++ b/app/views/irm/home/index.html.erb
@@ -24,7 +24,7 @@
                 <tr>
                   <td colspan="2">
                     <div class="tools-content-right">
-                      <%= render :partial => "irm/bulletins/bulletin_portlet" %>
+                      <% puts("+")#render :partial => "irm/bulletins/bulletin_portlet" %>
                     </div>
                   </td>
                 </tr>
