--- a/app/views/irm/report_types/_new_step_2.html.erb
+++ b/app/views/irm/report_types/_new_step_2.html.erb
@@ -1,7 +1,7 @@
 <style>
 
 </style>
-<div  class="bWizardBlock">
+<div  class="wizard-block">
     <div class="pbWizardTitle tertiaryPalette">
         <div class="ptRightTitle">
             <%= t(:step_n_total_m, :n => "2", :m => "2") %>
