--- a/app/views/irm/wf_approval_processes/_edit_step_1.html.erb
+++ b/app/views/irm/wf_approval_processes/_edit_step_1.html.erb
@@ -1,5 +1,5 @@
 
-<div  class="bWizardBlock">
+<div  class="wizard-block">
     <div class="pbWizardTitle tertiaryPalette">
         <div class="ptRightTitle">
             <%= t(:step_n_total_m, :n => "1", :m => "5") %>
