--- a/app/views/irm/wf_approval_steps/_new_step_1.html.erb
+++ b/app/views/irm/wf_approval_steps/_new_step_1.html.erb
@@ -1,4 +1,4 @@
-<div  class="bWizardBlock">
+<div  class="wizard-block">
     <div class="pbWizardTitle tertiaryPalette">
         <div class="ptRightTitle">
             <%= t(:step_n_total_m, :n => "1", :m => "3") %>
