--- a/app/views/skm/entry_headers/new_step_1.html.erb
+++ b/app/views/skm/entry_headers/new_step_1.html.erb
@@ -1,6 +1,6 @@
 <%= app_title({:description => t(:new)}) %>
 <%= form_for(@entry_header,:url=>{:action=>"new", :step => "2"},:builder => LabellingFormBuilder) do |f| %>
-<div  class="bWizardBlock">
+<div  class="wizard-block">
     <div class="pbWizardTitle tertiaryPalette">
         <div class="ptRightTitle">
             <%= t(:step_n_total_m, :n => "1", :m => "4") %>
