--- a/app/views/layouts/setting.html.erb
+++ b/app/views/layouts/setting.html.erb
@@ -3,7 +3,7 @@
 <head>
   <%= render :partial => "irm/common/application_title" %>
   <% require_javascript([:jquery,:jplugin]) %>
-  <% require_css([:default]) %>
+  <% require_css([:setting]) %>
   <%=render_loaded_javascript_css_files%>
   <%= csrf_meta_tag %>
   <script type="text/javascript">
