--- a/public/themes/default/stylesheets/button.ie6.css
+++ b/public/themes/default/stylesheets/button.ie6.css
@@ -1,4 +1,4 @@
-div.button, div.gray-button, div.as-button {
+.button, .gray-button, .as-button {
 	float: left;
 	margin-left: 6px;
 	margin-top: 1px;
@@ -6,7 +6,7 @@ div.button, div.gray-button, div.as-button {
 }
 
 
-div.button a {
+.button a {
     -moz-border-radius: 3px 3px 3px 3px;
     background: url("../images/btn_sprite.png") repeat-x scroll right top #E8E8E9;
     border-color: #B5B5B5 #B5B5B5 #7F7F7F;
@@ -21,13 +21,12 @@ div.button a {
     font-weight: bold;
 	line-height: 20px;
 }
-div.button a:hover{background-position: right -30px;}
-div.button input[type="submit"] {
-    -moz-border-radius: 3px 3px 3px 3px;
-    background: url("../images/btn_sprite.png") repeat-x scroll right top #E8E8E9;
-    border-color: #B5B5B5 #B5B5B5 #7F7F7F;
-	border-width: 1px;
-    border-style: solid;
+.button a:hover{background-position: right -30px;}
+.button input {
+    background: url("../images/btn_sprite.png") repeat-x scroll right top #E8E8E9 !important;
+    border-color: #B5B5B5 #B5B5B5 #7F7F7F !important;
+	border-width: 1px !important;
+    border-style: solid !important;
 	text-decoration: none;
 	color:#333333;
 	display: inline-block;
@@ -37,15 +36,15 @@ div.button input[type="submit"] {
     font-weight: bold;
 	line-height: 22px;
 }
-div.button input[type="submit"]:hover{background-position: right -30px; cursor: pointer;}
+.button input:hover{background-position: right -30px; cursor: pointer;}
 
-div.button a[class="disabled"]{
+.button a[class="disabled"]{
     color: #a9a9a9;
     background: none;
     background-color: #ededed;
 }
 
-div.gray-button a {
+.gray-button a {
     -moz-border-radius: 3px 3px 3px 3px;
     border-color: #f8f8f8;
 	border-width: 1px;
@@ -59,7 +58,7 @@ div.gray-button a {
     font-weight: bold;
 	line-height: 20px;
 }
-div.gray-button a:hover{
+.gray-button a:hover{
     background: url("../images/btn_sprite.png") repeat-x scroll right top #E8E8E9;
     /*background-position: right -30px;*/
     border-color: #cdcdcd;
