--- a/public/themes/default/stylesheets/container.ie6.css
+++ b/public/themes/default/stylesheets/container.ie6.css
@@ -203,7 +203,9 @@ body .page-block .pbHeader {
     padding-bottom: 2px;
 }
 .page-block {font-size: 105%;}
-.edit-block .pbHeader > table, .apexp .page-block.apexDefaultPageBlock .pbHeader > table, #ep.bLayoutBlock .pbHeader > table {border-bottom:1px solid #DBDBDB;padding:5px 0;}
+.edit-block .pbHeader > table,
+.apexp .page-block.apexDefaultPageBlock .pbHeader > table,
+#ep.bLayoutBlock .pbHeader > table {border-bottom:1px solid #DBDBDB;padding:5px 0;}
 /***********************toggle button ***********************/
 div.toolbar{
     margin: 5px;
