--- a/public/themes/default/stylesheets/form.ie6.css
+++ b/public/themes/default/stylesheets/form.ie6.css
@@ -1,13 +1,13 @@
 .quickCreateField {padding:1px 2px 5px 4px;}
 
-body .detail-block.pageblock .pbBody .labelCol,
-body .detail-block.page-block .pbBody .dataCol,
-body .detail-block.page-block .pbBody .data2Col,
-body .detail-block.page-block .pbBody .data3Col,
-body .page-block.edit-block .pbBody .labelCol,
-body .page-block.edit-block .pbBody .dataCol,
-body .page-block.edit-block .pbBody .data2Col,
-body .page-block.edit-block .pbBody .data3Col {
+body .detail-block .pbBody .labelCol,
+body .detail-block .pbBody .dataCol,
+body .detail-block .pbBody .data2Col,
+body .detail-block .pbBody .data3Col,
+body .edit-block .pbBody .labelCol,
+body .edit-block .pbBody .dataCol,
+body .edit-block .pbBody .data2Col,
+body .edit-block .pbBody .data3Col {
     padding-bottom: 3px;
     padding-top: 3px;
 }
@@ -21,8 +21,8 @@ body .page-block .pbBody .data3Col {
     padding-top:5px;
 }
 
-.edit-block.page-block .detailList tr td,
-.edit-block.page-block .detailList tr th {border-bottom-width:0 !important;}
+.edit-block .detailList tr td,
+.edit-block .detailList tr th {border-bottom-width:0 !important;}
 
 .page-block .dataCol {text-align: left;}
 
@@ -31,12 +31,17 @@ body .page-block .pbBody .label3Col {color: #4A4A56;}
 
 .page-block .detailList .labelCol {width: 18%;}
 .page-block .detailList .dataCol {width: 32%;}
-.page-block .detailList .data2Col {width: 82%; line-height: 25px;position:static;}
+.page-block .detailList .data2Col {width: 82%; position:static;}
 
 .page-block .detailList .labelCol {white-space: nowrap;}
 
-body .page-block .detailList tr td, body .page-block .detailList tr th, body table.list tr td, body table.list tr th{border-color:#ECECEC;}
-body .detail-block tr td {border:0 none !important;}
+body .detail-block tr td {border:0 none;}
+
+body .page-block .detailList tr td,
+body .page-block .detailList tr th,
+body table.list tr td,
+body table.list tr th{border-color:#ECECEC;}
+
 .page-block .detailList th, .page-block .detailList td {vertical-align: top;}
 
 .page-block .dataCol {padding:2px 2px 2px 10px;text-align:left;}
