修正.requiredInput内的textareaIE6下width 100%会导致换行的问题。

--- a/public/themes/default/stylesheets/form.ie6.css
+++ b/public/themes/default/stylesheets/form.ie6.css
@@ -61,6 +61,9 @@ body table.list tr th{border-color:#ECECEC;}
     position: static;
     width: 100%;
 }
+
+.requiredInput textarea {width:95%}
+
 .requiredInput .requiredBlock {
     background-color:#CC0000;
     bottom:1px;
