--- a/app/views/icm/incident_requests/_new_form.html.erb
+++ b/app/views/icm/incident_requests/_new_form.html.erb
@@ -92,7 +92,7 @@
 
             <tr>
               <td class="labelCol"><label for="incident_request_summary"><%=t(:label_icm_incident_request_summary)%></label></td>
-              <td class="dataCol" colspan="3" style="width:82%">
+              <td class="data2Col" colspan="3">
                 <%=f.text_area :summary,:rows=>8,:cols=>100,:value=>@incident_request.summary, :required=>true ,:id=>"incident_request_summary"%>
                 <%= rich_text_area("incident_request_summary") %>
               </td>
@@ -100,7 +100,7 @@
             </tr>
             <tr>
               <td class="labelCol"></td>
-              <td class="dataCol" colspan="3" style="width:82%">
+              <td class="data2Col" colspan="3">
                 <%= render :partial=>"helper/upload_file",:locals=>{:upload_file_id=>"new_incident_request_file"} %>
               </td>
             </tr>
