登陆页面IE6兼容性修改

--- a/app/views/irm/common/login.html.erb
+++ b/app/views/irm/common/login.html.erb
@@ -41,7 +41,7 @@
                 </div>
                 <span class="bottom_new"></span>
               </div>
-              <iframe id="shoutoutframe" frameborder=0 scrolling="no" src="/pages/loginimage_2.html?<%= Time.now.to_i%>">
+              <iframe id="shoutoutframe" frameborder=0 scrolling="no" src="/pages/loginimage.html?<%= Time.now.to_i%>">
 
               </iframe>
               
