忘记密码页面IE6兼容性修改

--- a/app/views/layouts/common.html.erb
+++ b/app/views/layouts/common.html.erb
@@ -3,7 +3,7 @@
 <head>
   <%= render :partial => "irm/common/application_title" %>
   <% require_javascript([:jquery,:jplugin]) %>
-  <% require_css([:default]) %>
+  <% require_css([:common]) %>
   <%=render_loaded_javascript_css_files%>
   <%= csrf_meta_tag %>
   <%= render :partial => "irm/common/address_bar_logo" %>
